email provider and authorize endpoint
